# careerrag

./: .gitignore  README.md
.github/workflows/: evals.yml  github-refresh.yml  index.yml
evals/: RESULTS.md  cases.py  review_questions.py  run_evals.py
indexer/: pyproject.toml
indexer/indexer/: documents.py  github_refresh.py  main.py
indexer/tests/: test_documents.py
knowledge/faq/: ai-tools.md  availability.md  compensation.md  how-i-work.md  languages.md  personal.md
knowledge/github/: README.md  repos.md
knowledge/posts/: 2026-07-01-dopaminebuy-launch.md  2026-07-03-jobradar-launch.md
knowledge/profile/: background-story.md  current-work.md  education.md  pitch.md  skills.md  work-3bx.md  work-creator-linkup.md  work-freelance.md  work-omnihr.md  work-sojourn.md
knowledge/projects/: careerrag.md  dopaminebuy.md  jobradar.md  portfolio-site.md
knowledge/testimonials/: cordova.md  peacock.md  pessoa.md  soteropulos.md  torres.md  vice.md
supabase/functions/embed/: index.ts
supabase/migrations/: 0001_careerrag.sql  0002_questions_log.sql  0003_hybrid_search.sql  0004_log_answers.sql  0005_visitor_context.sql
