[project]
name = "careerrag-indexer"
version = "0.1.0"
description = "Chunks the CareerRAG knowledge base, embeds it, and upserts to Supabase pgvector"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
